--- a/src/main/g8/frontend/src/main/assets/index.html
+++ b/src/main/g8/frontend/src/main/assets/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <title>$name$</title>
 
-    <script src="scripts/frontend-deps.js"></script>
-    <script src="scripts/frontend.js"></script>
+    <script src="/scripts/frontend-deps.js"></script>
+    <script src="/scripts/frontend.js"></script>
 
-    <link rel="stylesheet" type="text/css" href="styles/main.css">
+    <link rel="stylesheet" type="text/css" href="/styles/main.css">
 </head>
 <body>
     <div id="application"></div>
